--- a/Projeto 2/main.css
+++ b/Projeto 2/main.css
@@ -34,6 +34,10 @@ header h1 {
 
 form {
     display: flex;
+    max-width:  640px;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 56px;
 }
 
 form input{
@@ -51,4 +55,43 @@ form button {
     font-weight: bold;
     border: none;
     cursor: pointer;
+    padding: 8px;
+}
+
+table {
+    width: 100%;
+}
+
+table th {
+    border-bottom: 2px solid #000;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+tbody td {
+    padding: 16px 0;
+    text-align: center;
+    font-size: 18px;
+    border-bottom: 1px solid rgba(0,0,0,0.5);
+}
+
+table td img {
+    height: 30px;
+}
+
+.resultado {
+    padding: 8px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #000;
+    border-radius: 3px;
+}
+
+.aprovado {
+    background-color: #009432;
+}
+
+.reprovado {
+    background-color: red;
 }
